--- a/app/src/main/res/layout/form.xml
+++ b/app/src/main/res/layout/form.xml
@@ -19,7 +19,7 @@
 
         <com.subinkrishna.widget.CircularImageView xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/profile_image"
-            android:layout_width="395dp"
+            android:layout_width="match_parent"
             android:layout_height="96dp"
             android:src="@drawable/blank_pic"
             app:ci_borderColor="#a1a5c0"
