--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -25,14 +25,14 @@
 
     <!-- TextView and FrameLayout (which contains buttons) for Priority Selection -->
     <TextView
-        android:layout_width="wrap_content"
+        style="@style/TextAppearance.AppCompat.Medium"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
-        android:textColor="@android:color/primary_text_light"
-        style="@style/TextAppearance.AppCompat.Medium"
-        android:text="@string/priority_string"
+        android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"/>
+        android:text="@string/priority_string"
+        android:textColor="@android:color/primary_text_light" />
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -44,42 +44,45 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:layout_gravity="center"
+            android:orientation="horizontal"
             android:weightSum="3">
 
             <Button
-                style="?android:attr/buttonBarButtonStyle"
-                android:textColor="@android:color/primary_text_light"
                 android:id="@+id/buttonP1"
+                style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:background="@color/materialRed"
+                android:onClick="onPrioritySelected"
                 android:text="@string/high_priority"
-                android:layout_weight="1"
-                android:onClick="onPrioritySelected"/>
+                android:textColor="@android:color/primary_text_light"
+                android:textSize="12sp" />
 
             <Button
-                style="?android:attr/buttonBarButtonStyle"
-                android:textColor="@android:color/primary_text_light"
                 android:id="@+id/buttonP2"
+                style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@color/materialOrange"
-                android:text="@string/med_priority"
                 android:layout_weight="1"
-                android:onClick="onPrioritySelected"/>
+                android:background="@color/materialOrange"
+                android:onClick="onPrioritySelected"
+                android:text="@string/med_priority"
+                android:textColor="@android:color/primary_text_light"
+                android:textSize="12sp" />
 
             <Button
-                style="?android:attr/buttonBarButtonStyle"
-                android:textColor="@android:color/primary_text_light"
                 android:id="@+id/buttonP3"
+                style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@color/materialYellow"
-                android:text="@string/low_priority"
                 android:layout_weight="1"
-                android:onClick="onPrioritySelected"/>
+                android:background="@color/materialYellow"
+                android:onClick="onPrioritySelected"
+                android:text="@string/low_priority"
+                android:textColor="@android:color/primary_text_light"
+                android:textSize="12sp" />
 
         </LinearLayout>
 
@@ -87,33 +90,36 @@
         <RadioGroup
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:layout_gravity="center"
+            android:orientation="horizontal"
             android:weightSum="3">
 
             <RadioButton
                 android:id="@+id/radButton1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:onClick="onPrioritySelected"
                 android:layout_weight="1"
-                android:theme="@style/WhiteRadioButton"/>
+                android:onClick="onPrioritySelected"
+                android:textSize="12sp"
+                android:theme="@style/WhiteRadioButton" />
 
             <RadioButton
                 android:id="@+id/radButton2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:onClick="onPrioritySelected"
                 android:layout_weight="1"
-                android:theme="@style/WhiteRadioButton"/>
+                android:onClick="onPrioritySelected"
+                android:textSize="12sp"
+                android:theme="@style/WhiteRadioButton" />
 
             <RadioButton
                 android:id="@+id/radButton3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:onClick="onPrioritySelected"
                 android:layout_weight="1"
-                android:theme="@style/WhiteRadioButton"/>
+                android:onClick="onPrioritySelected"
+                android:textSize="12sp"
+                android:theme="@style/WhiteRadioButton" />
 
         </RadioGroup>
 
@@ -122,13 +128,14 @@
     <!-- Add button -->
     <Button
         android:id="@+id/addButton"
+        style="@style/TextAppearance.AppCompat.Large"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:background="#3c3f52"
+        android:onClick="onClickAddTask"
         android:text="@string/add_button"
-        style="@style/TextAppearance.AppCompat.Large"
         android:textColor="@android:color/primary_text_dark"
-        android:background="@color/colorPrimary"
-        android:onClick="onClickAddTask"/>
+        android:textSize="18sp" />
 
 </LinearLayout>
